Bug 467517 - Hue saturation filter dialog shows black sliders at start (git 14447ec)
Summary: Hue saturation filter dialog shows black sliders at start (git 14447ec)
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Filters (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-03-18 09:26 UTC by Raghavendra kamath
Modified: 2023-03-26 20:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Raghavendra kamath 2023-03-18 09:26:16 UTC
SUMMARY
In the nightly builds, the hue saturation filter dialog starts up with all the sliders showing on black bar. When the user clicks to change the values the colours appear.


STEPS TO REPRODUCE
1. Download krita nightly
2. Create a new document
3. Open Hue saturation filter dialog  - Ctrl U or Filters > Adjust > HSV Adjustment


## SYSTEM INFORMATION 
Krita

 Version: 5.1.3
 Hidpi: true

Qt

  Version (compiled): 5.12.12
  Version (loaded): 5.12.12

OS Information

  Build ABI: x86_64-little_endian-lp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: linux
  Kernel Version: 6.1.18-200.fc37.x86_64
  Pretty Productname: Fedora Linux 37 (KDE Plasma)
  Product Type: fedora
  Product Version: 37
  Desktop: KDE

Locale

  Languages: en_US
  C locale: hi_IN.UTF-8
  QLocale current: en
  QLocale system: hi
  QTextCodec for locale: UTF-8

OpenGL Info
 
  Vendor:  "Intel" 
  Renderer:  "Mesa Intel(R) UHD Graphics 770 (ADL-S GT1)" 
  Version:  "4.6 (Compatibility Profile) Mesa 22.3.7" 
  Shading language:  "4.60" 
  Requested format:  QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
  Current format:  QSurfaceFormat(version 4.6, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
     Version: 4.6
     Supports deprecated functions true 
     is OpenGL ES: false 
  supportsBufferMapping: true 
  supportsBufferInvalidation: true 
  forceDisableTextureBuffers: false 
  Extensions: 
     "GL_EXT_compiled_vertex_array" 
     "GL_ARB_texture_compression_rgtc" 
     "GL_ARB_transpose_matrix" 
     "GL_AMD_seamless_cubemap_per_texture" 
     "GL_ARB_base_instance" 
     "GL_EXT_shader_framebuffer_fetch_non_coherent" 
     "GL_KHR_parallel_shader_compile" 
     "GL_ARB_ES3_1_compatibility" 
     "GL_ATI_draw_buffers" 
     "GL_ARB_gpu_shader_fp64" 
     "GL_ARB_compute_shader" 
     "GL_AMD_query_buffer_object" 
     "GL_ARB_texture_query_levels" 
     "GL_ARB_depth_clamp" 
     "GL_ARB_shader_precision" 
     "GL_ARB_timer_query" 
     "GL_ARB_direct_state_access" 
     "GL_EXT_texture_object" 
     "GL_NV_texture_env_combine4" 
     "GL_EXT_gpu_program_parameters" 
     "GL_EXT_texture_env_add" 
     "GL_ARB_seamless_cube_map" 
     "GL_EXT_texture_swizzle" 
     "GL_ARB_depth_texture" 
     "GL_ARB_shader_atomic_counter_ops" 
     "GL_ARB_clear_buffer_object" 
     "GL_AMD_vertex_shader_layer" 
     "GL_ARB_provoking_vertex" 
     "GL_EXT_texture_cube_map" 
     "GL_EXT_framebuffer_multisample_blit_scaled" 
     "GL_EXT_texture_compression_rgtc" 
     "GL_ARB_shader_storage_buffer_object" 
     "GL_NV_texgen_reflection" 
     "GL_EXT_packed_float" 
     "GL_EXT_texture_sRGB" 
     "GL_ARB_transform_feedback2" 
     "GL_ARB_texture_multisample" 
     "GL_EXT_framebuffer_blit" 
     "GL_ARB_depth_buffer_float" 
     "GL_ARB_viewport_array" 
     "GL_EXT_provoking_vertex" 
     "GL_EXT_texture3D" 
     "GL_ATI_fragment_shader" 
     "GL_ARB_texture_mirrored_repeat" 
     "GL_ARB_pipeline_statistics_query" 
     "GL_ARB_vertex_shader" 
     "GL_ARB_explicit_attrib_location" 
     "GL_EXT_separate_specular_color" 
     "GL_EXT_packed_pixels" 
     "GL_ARB_draw_instanced" 
     "GL_EXT_vertex_array_bgra" 
     "GL_EXT_texture_rectangle" 
     "GL_ARB_polygon_offset_clamp" 
     "GL_ARB_shader_atomic_counters" 
     "GL_ARB_vertex_type_2_10_10_10_rev" 
     "GL_EXT_fog_coord" 
     "GL_ARB_multi_draw_indirect" 
     "GL_SUN_multi_draw_arrays" 
     "GL_ARB_copy_image" 
     "GL_EXT_shadow_funcs" 
     "GL_ARB_multisample" 
     "GL_ARB_texture_filter_anisotropic" 
     "GL_ARB_fragment_layer_viewport" 
     "GL_EXT_texture_edge_clamp" 
     "GL_ARB_shader_objects" 
     "GL_ATI_texture_compression_3dc" 
     "GL_EXT_vertex_array" 
     "GL_ARB_conservative_depth" 
     "GL_ARB_vertex_buffer_object" 
     "GL_ARB_uniform_buffer_object" 
     "GL_ARB_shader_image_size" 
     "GL_ARB_texture_mirror_clamp_to_edge" 
     "GL_ARB_enhanced_layouts" 
     "GL_EXT_blend_func_separate" 
     "GL_EXT_EGL_image_storage" 
     "GL_EXT_transform_feedback" 
     "GL_ARB_clear_texture" 
     "GL_ARB_texture_storage_multisample" 
     "GL_EXT_texture_buffer_object" 
     "GL_ARB_texture_gather" 
     "GL_ARB_shading_language_100" 
     "GL_ARB_transform_feedback_instanced" 
     "GL_AMD_depth_clamp_separate" 
     "GL_ARB_point_sprite" 
     "GL_NV_blend_square" 
     "GL_ARB_color_buffer_float" 
     "GL_NV_texture_barrier" 
     "GL_ARB_gpu_shader_int64" 
     "GL_ARB_buffer_storage" 
     "GL_KHR_context_flush_control" 
     "GL_ARB_vertex_array_bgra" 
     "GL_ARB_vertex_attrib_64bit" 
     "GL_ARB_texture_buffer_object_rgb32" 
     "GL_ARB_framebuffer_sRGB" 
     "GL_ARB_draw_elements_base_vertex" 
     "GL_ARB_texture_rectangle" 
     "GL_AMD_multi_draw_indirect" 
     "GL_ARB_shader_bit_encoding" 
     "GL_EXT_blend_subtract" 
     "GL_ARB_texture_cube_map_array" 
     "GL_INTEL_performance_query" 
     "GL_EXT_texture_compression_dxt1" 
     "GL_ARB_shader_subroutine" 
     "GL_EXT_memory_object" 
     "GL_EXT_shader_samples_identical" 
     "GL_KHR_robust_buffer_access_behavior" 
     "GL_KHR_texture_compression_astc_sliced_3d" 
     "GL_ARB_shading_language_420pack" 
     "GL_ARB_internalformat_query" 
     "GL_ARB_texture_swizzle" 
     "GL_EXT_rescale_normal" 
     "GL_NV_conditional_render" 
     "GL_EXT_draw_buffers2" 
     "GL_EXT_draw_range_elements" 
     "GL_EXT_vertex_attrib_64bit" 
     "GL_ARB_multi_bind" 
     "GL_ATI_texture_float" 
     "GL_EXT_demote_to_helper_invocation" 
     "GL_NV_half_float" 
     "GL_IBM_multimode_draw_arrays" 
     "GL_ARB_half_float_pixel" 
     "GL_EXT_multi_draw_arrays" 
     "GL_ARB_occlusion_query" 
     "GL_ARB_ES2_compatibility" 
     "GL_EXT_draw_instanced" 
     "GL_NV_depth_clamp" 
     "GL_NV_fragment_shader_interlock" 
     "GL_ARB_gl_spirv" 
     "GL_ARB_debug_output" 
     "GL_ARB_shader_viewport_layer_array" 
     "GL_AMD_vertex_shader_viewport_index" 
     "GL_3DFX_texture_compression_FXT1" 
     "GL_IBM_rasterpos_clip" 
     "GL_ARB_texture_rg" 
     "GL_ARB_clip_control" 
     "GL_ARB_fragment_shader_interlock" 
     "GL_EXT_debug_label" 
     "GL_EXT_point_parameters" 
     "GL_ARB_fragment_program" 
     "GL_ARB_sample_shading" 
     "GL_EXT_texture_shared_exponent" 
     "GL_ARB_shadow" 
     "GL_INTEL_shader_integer_functions2" 
     "GL_MESA_texture_signed_rgba" 
     "GL_ARB_ES3_compatibility" 
     "GL_ARB_compressed_texture_pixel_storage" 
     "GL_ARB_seamless_cubemap_per_texture" 
     "GL_ARB_shader_draw_parameters" 
     "GL_ARB_shading_language_packing" 
     "GL_S3_s3tc" 
     "GL_EXT_framebuffer_object" 
     "GL_ARB_multitexture" 
     "GL_EXT_texture_array" 
     "GL_ANGLE_texture_compression_dxt5" 
     "GL_ARB_texture_stencil8" 
     "GL_ARB_program_interface_query" 
     "GL_ARB_vertex_type_10f_11f_11f_rev" 
     "GL_ARB_pixel_buffer_object" 
     "GL_EXT_shader_framebuffer_fetch" 
     "GL_ARB_compatibility" 
     "GL_ARB_texture_compression" 
     "GL_NV_copy_image" 
     "GL_EXT_blend_minmax" 
     "GL_ARB_instanced_arrays" 
     "GL_ARB_shader_stencil_export" 
     "GL_ATI_texture_env_combine3" 
     "GL_AMD_shader_stencil_export" 
     "GL_AMD_shader_trinary_minmax" 
     "GL_EXT_stencil_two_side" 
     "GL_EXT_semaphore_fd" 
     "GL_EXT_bgra" 
     "GL_ARB_shading_language_include" 
     "GL_EXT_direct_state_access" 
     "GL_ARB_blend_func_extended" 
     "GL_ARB_shader_texture_image_samples" 
     "GL_EXT_depth_bounds_test" 
     "GL_INGR_blend_func_separate" 
     "GL_NV_light_max_exponent" 
     "GL_MESA_window_pos" 
     "GL_ARB_draw_buffers" 
     "GL_EXT_abgr" 
     "GL_EXT_blend_equation_separate" 
     "GL_ARB_texture_border_clamp" 
     "GL_EXT_timer_query" 
     "GL_ARB_get_texture_sub_image" 
     "GL_ARB_texture_env_combine" 
     "GL_EXT_stencil_wrap" 
     "GL_ARB_vertex_array_object" 
     "GL_EXT_polygon_offset_clamp" 
     "GL_OES_read_format" 
     "GL_ARB_ES3_2_compatibility" 
     "GL_KHR_texture_compression_astc_ldr" 
     "GL_EXT_subtexture" 
     "GL_IBM_texture_mirrored_repeat" 
     "GL_ARB_shader_image_load_store" 
     "GL_ARB_robustness" 
     "GL_ARB_transform_feedback_overflow_query" 
     "GL_ARB_indirect_parameters" 
     "GL_EXT_texture_sRGB_R8" 
     "GL_KHR_no_error" 
     "GL_EXT_texture_env_combine" 
     "GL_EXT_gpu_shader4" 
     "GL_ARB_occlusion_query2" 
     "GL_EXT_memory_object_fd" 
     "GL_EXT_texture_env_dot3" 
     "GL_EXT_shader_integer_mix" 
     "GL_MESA_shader_integer_functions" 
     "GL_ARB_texture_compression_bptc" 
     "GL_EXT_texture_filter_anisotropic" 
     "GL_ARB_shader_group_vote" 
     "GL_ARB_texture_barrier" 
     "GL_KHR_blend_equation_advanced_coherent" 
     "GL_EXT_framebuffer_sRGB" 
     "GL_ARB_map_buffer_range" 
     "GL_NV_fog_distance" 
     "GL_ARB_sampler_objects" 
     "GL_ARB_texture_query_lod" 
     "GL_ARB_texture_env_dot3" 
     "GL_EXT_texture_shadow_lod" 
     "GL_ARB_copy_buffer" 
     "GL_ARB_gpu_shader5" 
     "GL_ARB_fragment_coord_conventions" 
     "GL_NV_texture_rectangle" 
     "GL_EXT_pixel_buffer_object" 
     "GL_ARB_internalformat_query2" 
     "GL_EXT_semaphore" 
     "GL_EXT_packed_depth_stencil" 
     "GL_ARB_texture_buffer_range" 
     "GL_AMD_conservative_depth" 
     "GL_NV_compute_shader_derivatives" 
     "GL_ARB_draw_indirect" 
     "GL_ARB_parallel_shader_compile" 
     "GL_ARB_texture_non_power_of_two" 
     "GL_ARB_framebuffer_object" 
     "GL_ARB_shader_clock" 
     "GL_EXT_secondary_color" 
     "GL_INTEL_shader_atomic_float_minmax" 
     "GL_ARB_explicit_uniform_location" 
     "GL_APPLE_packed_pixels" 
     "GL_AMD_texture_texture4" 
     "GL_ARB_texture_storage" 
     "GL_OES_EGL_image" 
     "GL_NV_ES1_1_compatibility" 
     "GL_ARB_vertex_attrib_binding" 
     "GL_SGIS_texture_border_clamp" 
     "GL_ARB_query_buffer_object" 
     "GL_EXT_texture_compression_latc" 
     "GL_EXT_texture" 
     "GL_ARB_texture_cube_map" 
     "GL_SGIS_texture_lod" 
     "GL_ARB_framebuffer_no_attachments" 
     "GL_INTEL_blackhole_render" 
     "GL_ARB_texture_env_add" 
     "GL_ARB_transform_feedback3" 
     "GL_ATI_blend_equation_separate" 
     "GL_MESA_framebuffer_flip_y" 
     "GL_SGIS_texture_edge_clamp" 
     "GL_ANGLE_texture_compression_dxt3" 
     "GL_KHR_debug" 
     "GL_ARB_separate_shader_objects" 
     "GL_ARB_shader_ballot" 
     "GL_ARB_compute_variable_group_size" 
     "GL_ARB_fragment_program_shadow" 
     "GL_NV_primitive_restart" 
     "GL_EXT_texture_sRGB_decode" 
     "GL_ARB_arrays_of_arrays" 
     "GL_ARB_texture_rgb10_a2ui" 
     "GL_ARB_texture_float" 
     "GL_AMD_performance_monitor" 
     "GL_ARB_derivative_control" 
     "GL_ARB_texture_env_crossbar" 
     "GL_ARB_invalidate_subdata" 
     "GL_EXT_blend_color" 
     "GL_NV_packed_depth_stencil" 
     "GL_ARB_point_parameters" 
     "GL_KHR_robustness" 
     "GL_EXT_texture_compression_s3tc" 
     "GL_AMD_pinned_memory" 
     "GL_ARB_post_depth_coverage" 
     "GL_ARB_window_pos" 
     "GL_ATI_separate_stencil" 
     "GL_KHR_blend_equation_advanced" 
     "GL_EXT_EGL_sync" 
     "GL_AMD_draw_buffers_blend" 
     "GL_EXT_texture_integer" 
     "GL_ARB_shader_texture_lod" 
     "GL_ARB_vertex_program" 
     "GL_ARB_texture_view" 
     "GL_ARB_draw_buffers_blend" 
     "GL_ARB_stencil_texturing" 
     "GL_SGIS_generate_mipmap" 
     "GL_ARB_map_buffer_alignment" 
     "GL_ARB_tessellation_shader" 
     "GL_EXT_framebuffer_multisample" 
     "GL_ARB_half_float_vertex" 
     "GL_ARB_sync" 
     "GL_EXT_copy_texture" 
     "GL_ARB_fragment_shader" 
     "GL_ARB_conditional_render_inverted" 
     "GL_ARB_robust_buffer_access_behavior" 
     "GL_EXT_texture_lod_bias" 
     "GL_ARB_cull_distance" 
     "GL_ARB_get_program_binary" 
     "GL_EXT_texture_snorm" 
     "GL_MESA_pack_invert" 
     "GL_ARB_spirv_extensions" 
     "GL_ARB_texture_buffer_object" 

QPA OpenGL Detection Info 
  supportsDesktopGL: true 
  supportsOpenGLES: true 
  isQtPreferOpenGLES: false 

useBufferInvalidation (config option): false


Hardware Information

  GPU Acceleration: auto
  Memory: 31871 Mb
  Number of Cores: 20
  Swap Location: /tmp
  Built for: sse2
  Base instruction set: sse2
  Supported instruction sets: fma3+avx2 avx2 fma3+avx avx fma4 fma3+sse4.2 sse4.2 sse4.1 ssse3 sse3 sse2 

Current Settings

  Current Swap Location: /tmp
  Current Swap Location writable: true
  Undo Enabled: true
  Undo Stack Limit: 200
  Use OpenGL: true
  Use OpenGL Texture Buffer: true
  Disable Vector Optimizations: false
  Disable AVX Optimizations: false
  Canvas State: OPENGL_SUCCESS
  Autosave Interval: 420
  Use Backup Files: true
  Number of Backups Kept: 1
  Backup File Suffix: ~
  Backup Location: Same Folder as the File
  Backup Location writable: false
  Use Win8 Pointer Input: false
  Use RightMiddleTabletButton Workaround: false
  Levels of Detail Enabled: false
  Use Zip64: false


Loaded Python Plugins
	colorspace
	comics_project_management_tools
	documenttools
	exportlayers
	filtermanager
	lastdocumentsdocker
	plugin_importer
	quick_settings_docker
	scripter
	tenbrushes
	tenscripts


Display Information
Number of screens: 1
	Screen: 0
		Name: HDMI-1
		Depth: 24
		Scale: 1
		Physical DPI108.888
		Logical DPI96.0236
		Physical Size: 597, 336
		Position: 0, 0
		Resolution in pixels: 2560x1440
		Manufacturer: BNQ
		Model: BenQ LCD-
		Refresh Rate: 59
Comment 1 Invent Merge Service 2023-03-26 20:57:33 UTC
Git commit 2f3e75ccad34986aaa4b6caec4a339c2657047e3 by Merge Service, on behalf of Freya Lupen.
Committed on 26/03/2023 at 20:56.
Pushed by merge-service into branch 'master'.

Fix HSV filter sliders not being initialized

Fixes a safe assert mistakenly being triggered,
causing the sliders to appear black initially.

Part-of: <https://invent.kde.org/graphics/krita/-/merge_requests/1776>

M  +1    -1    plugins/filters/colorsfilters/kis_hsv_adjustment_filter.cpp

https://invent.kde.org/graphics/krita/commit/2f3e75ccad34986aaa4b6caec4a339c2657047e3