Fix HSV filter sliders not being initialized

Fixes a safe assert mistakenly being triggered,
causing the sliders to appear black initially.

BUG:467517

Part-of: <https://invent.kde.org/graphics/krita/-/merge_requests/1776>